--- a/q1.html
+++ b/q1.html
@@ -18,8 +18,16 @@ e) Write a paragraph explaining why the elements that you find in part c are a b
 
 <body>
     <section id="1">
+        <h1>Emphasis and strengthened text</h1>
+        <p>In this example we have <em>emphasized/em> the words.</p>
     </section>
     <section id="2">
+        <h2>Separating content from presentation</h2>
+        <h3>explaining</h3>
+        <p>using '<em>' and '<strong>' tag are better than '<i>' and '<b>'tag as it makes more sense in the text.
+            The `<em>` tag means that the text is useful for screen readers and the `<strong>` tag means that the text is strong importance. 
+            This make them easier to find and also helps the search engines to understand the content of page 
+            better then the `<i>` and `<b>`, which only change the style of the text but does not give any meaning.</p>
     </section>
 </body>
 
