--- a/q2.html
+++ b/q2.html
@@ -12,6 +12,18 @@ b) Use an embedded stylesheet to set the default text font face to a serif font 
 <body>
     <section id="1">
         <!-- put article here -->
+         <h1> Difference between Google Doc and HTML </h1>
+         <p> Google Docs are very convenient for use with the formatting toolbar being easily displayed on the page.
+            HTML documents are code based and need to be manually coded while using tags for subdividing and overall layout.
+            Google Docs is also favorable when it comes to collaboration since people can both edit and write comments. HTML while they can be
+            shared but they
+            are needed tools to collaborative with it.
+            Additional article created in Google Docs can share and publish easily with single share option,But need HTML
+            to be run on a web
+            web should host server to make it open.
+            HTML has its advantage and can be made as flexible as needed In fact it presents options for doing the advanced stylization and scripting through
+            CSS and JavaScript
+            On the plus side, Google Docs is a flexible tool while on the flip side it lacks possibilities of completely developing own design and commands.</p>
     </section>
 </body>
 
