--- a/q3.html
+++ b/q3.html
@@ -3,6 +3,23 @@
 
 <head>
     <title>Question 3</title>
+    <style>
+        header {
+            background-color: rgb(71, 71, 175);
+            color: whitesmoke;
+        }
+
+        footer {
+            background-color: rgb(46, 255, 102);
+            color: rgb(15, 1, 1);
+        }
+
+        main {
+            background-color: rgb(220, 33, 161);
+            color: rgb(255, 255, 255);
+        }
+    </style>
+
     <!-- 
 Write an article using semantic markup, header, footer, main and section. In the article compare and contrast old fashioned typesetting with desktop pubishing, html and css.
 Color the header with white text on a blue background, the footer with white text on a green background, the main portion with black text o a parchment colored background. 
@@ -12,6 +29,30 @@ Make the nouns in the header and footer have a text weight of 600, while the res
 </head>
 
 <body>
+    <header>
+        <h1><strong> typesetting</strong> vs desktop publishing, HTML and CSS</h1>
+    </header>
+    <main>
+        <section>
+            <h2>typesetting</h2>
+            <p>The arrangement of typesetting has manual placing of letters and symbols on metal plates.
+                This needs focus because every piece of type has to be positioned properly in order to print into words and sentences.</p>
+        </section>
+        <h2>desktop publishing</h2>
+        <p>This is an important part in translation process, more so when considering big scale projects.</p>
+        <section>
+            <h2>HTML and css</h2>
+            <p> HTML does the layout work after that CSS does the presentation </p>
+        </section>
+        <h3> Distinguish between Typesetting as a print technique, and desktop publishing or web technologies.
+            as is the case with HTML and CSS provide more flexibility and performance.
+            Desktop publishing allows for quick and easy change and the integration of multimedia while HTML and CSS offer an
+            experience that can hardly be provided by typesetting.</h3>
+    </main>
+
+    <footer>
+        
+    </footer>
 </body>
 
 </html>
